Bstorm notebook 1st commit

--- a/brainstorm/brainstorm.ipynb
+++ b/brainstorm/brainstorm.ipynb
@@ -22,9 +22,7 @@
    "outputs": [],
    "source": [
     "config = configparser.ConfigParser()\n",
-    "config.read('credentials.conf')\n",
-    "    config = configparser.ConfigParser()\n",
-    "    config.read('dwh.cfg')"
+    "config.read('credentials.conf')"
    ]
   },
   {
@@ -66,7 +64,7 @@
    "source": [
     "headers = {\n",
     "\t\"X-RapidAPI-Host\": \"streaming-availability.p.rapidapi.com\",\n",
-    "\t\"X-RapidAPI-Key\": \"82fb07a20bmsh45cd9bc737f38b9p1fac95jsn6c3c9c2b02ae\"\n",
+    "\t\"X-RapidAPI-Key\": config[\"RAPIDAPI\"][\"KEY\"]\n",
     "}\n",
     "\n",
     "r = requests.request(\"GET\", url, headers=headers, params=querystring)\n"
@@ -866,9 +864,7 @@
    "source": [
     "import tweepy\n",
     "\n",
-    "bearer_token = \"AAAAAAAAAAAAAAAAAAAAAMmtbgEAAAAAPmPHdEWvVRQLLEF2HDT4sw1%2BZEo%3Diek1rGuSyJ9XDqJuP0XsevXcltEQC7ZK62umGRnDEHVCF9Chj2\"\n",
-    "\n",
-    "client = tweepy.Client(bearer_token)\n",
+    "client = tweepy.Client(config[\"TWITTER\"][\"TOKEN\"])\n",
     "query = \"Miranha\"\n",
     "\n",
     "\n",
