--- a/brainstorm/brstorm.ipynb
+++ b/brainstorm/brstorm.ipynb
@@ -1153,8 +1153,389 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "8ec5ed21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyarrow\n",
+      "  Downloading pyarrow-7.0.0-cp39-cp39-win_amd64.whl (16.1 MB)\n",
+      "Requirement already satisfied: numpy>=1.16.6 in c:\\users\\luizernestoferreiraa\\anaconda3\\lib\\site-packages (from pyarrow) (1.20.3)\n",
+      "Installing collected packages: pyarrow\n",
+      "Successfully installed pyarrow-7.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 21.3.1; however, version 22.0.4 is available.\n",
+      "You should consider upgrading via the 'C:\\Users\\LuizErnestoFerreiraA\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#!pip install pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "301fbb6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>released_year</th>\n",
+       "      <th>certificate</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>genre1</th>\n",
+       "      <th>genre2</th>\n",
+       "      <th>genre3</th>\n",
+       "      <th>imdb</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>meta_score</th>\n",
+       "      <th>director</th>\n",
+       "      <th>star1</th>\n",
+       "      <th>star2</th>\n",
+       "      <th>star3</th>\n",
+       "      <th>star4</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>gross</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Shawshank Redemption</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>A</td>\n",
+       "      <td>142</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>Two imprisoned men bond over a number of years...</td>\n",
+       "      <td>80</td>\n",
+       "      <td>Frank Darabont</td>\n",
+       "      <td>Tim Robbins</td>\n",
+       "      <td>Morgan Freeman</td>\n",
+       "      <td>Bob Gunton</td>\n",
+       "      <td>William Sadler</td>\n",
+       "      <td>2343110</td>\n",
+       "      <td>28341469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Godfather</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>A</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9.2</td>\n",
+       "      <td>An organized crime dynasty's aging patriarch t...</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Marlon Brando</td>\n",
+       "      <td>Al Pacino</td>\n",
+       "      <td>James Caan</td>\n",
+       "      <td>Diane Keaton</td>\n",
+       "      <td>1620367</td>\n",
+       "      <td>134966411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Dark Knight</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>UA</td>\n",
+       "      <td>152</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>When the menace known as the Joker wreaks havo...</td>\n",
+       "      <td>84</td>\n",
+       "      <td>Christopher Nolan</td>\n",
+       "      <td>Christian Bale</td>\n",
+       "      <td>Heath Ledger</td>\n",
+       "      <td>Aaron Eckhart</td>\n",
+       "      <td>Michael Caine</td>\n",
+       "      <td>2303232</td>\n",
+       "      <td>534858444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Godfather: Part II</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>A</td>\n",
+       "      <td>202</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>The early life and career of Vito Corleone in ...</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Francis Ford Coppola</td>\n",
+       "      <td>Al Pacino</td>\n",
+       "      <td>Robert De Niro</td>\n",
+       "      <td>Robert Duvall</td>\n",
+       "      <td>Diane Keaton</td>\n",
+       "      <td>1129952</td>\n",
+       "      <td>57300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12 Angry Men</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>U</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>A jury holdout attempts to prevent a miscarria...</td>\n",
+       "      <td>96</td>\n",
+       "      <td>Sidney Lumet</td>\n",
+       "      <td>Henry Fonda</td>\n",
+       "      <td>Lee J. Cobb</td>\n",
+       "      <td>Martin Balsam</td>\n",
+       "      <td>John Fiedler</td>\n",
+       "      <td>689845</td>\n",
+       "      <td>4360000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>Breakfast at Tiffany's</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>A</td>\n",
+       "      <td>115</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>Romance</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>A young New York socialite becomes interested ...</td>\n",
+       "      <td>76</td>\n",
+       "      <td>Blake Edwards</td>\n",
+       "      <td>Audrey Hepburn</td>\n",
+       "      <td>George Peppard</td>\n",
+       "      <td>Patricia Neal</td>\n",
+       "      <td>Buddy Ebsen</td>\n",
+       "      <td>166544</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>Giant</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>G</td>\n",
+       "      <td>201</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>Western</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>Sprawling epic covering the life of a Texas ca...</td>\n",
+       "      <td>84</td>\n",
+       "      <td>George Stevens</td>\n",
+       "      <td>Elizabeth Taylor</td>\n",
+       "      <td>Rock Hudson</td>\n",
+       "      <td>James Dean</td>\n",
+       "      <td>Carroll Baker</td>\n",
+       "      <td>34075</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>From Here to Eternity</td>\n",
+       "      <td>1953</td>\n",
+       "      <td>Passed</td>\n",
+       "      <td>118</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>Romance</td>\n",
+       "      <td>War</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>In Hawaii in 1941, a private is cruelly punish...</td>\n",
+       "      <td>85</td>\n",
+       "      <td>Fred Zinnemann</td>\n",
+       "      <td>Burt Lancaster</td>\n",
+       "      <td>Montgomery Clift</td>\n",
+       "      <td>Deborah Kerr</td>\n",
+       "      <td>Donna Reed</td>\n",
+       "      <td>43374</td>\n",
+       "      <td>30500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>Lifeboat</td>\n",
+       "      <td>1944</td>\n",
+       "      <td>None</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>War</td>\n",
+       "      <td>None</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>Several survivors of a torpedoed merchant ship...</td>\n",
+       "      <td>78</td>\n",
+       "      <td>Alfred Hitchcock</td>\n",
+       "      <td>Tallulah Bankhead</td>\n",
+       "      <td>John Hodiak</td>\n",
+       "      <td>Walter Slezak</td>\n",
+       "      <td>William Bendix</td>\n",
+       "      <td>26471</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>The 39 Steps</td>\n",
+       "      <td>1935</td>\n",
+       "      <td>None</td>\n",
+       "      <td>86</td>\n",
+       "      <td>Crime</td>\n",
+       "      <td>Mystery</td>\n",
+       "      <td>Thriller</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>A man in London tries to help a counter-espion...</td>\n",
+       "      <td>93</td>\n",
+       "      <td>Alfred Hitchcock</td>\n",
+       "      <td>Robert Donat</td>\n",
+       "      <td>Madeleine Carroll</td>\n",
+       "      <td>Lucie Mannheim</td>\n",
+       "      <td>Godfrey Tearle</td>\n",
+       "      <td>51853</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        title  released_year certificate  runtime  genre1  \\\n",
+       "0    The Shawshank Redemption           1994           A      142   Drama   \n",
+       "1               The Godfather           1972           A      175   Crime   \n",
+       "2             The Dark Knight           2008          UA      152  Action   \n",
+       "3      The Godfather: Part II           1974           A      202   Crime   \n",
+       "4                12 Angry Men           1957           U       96   Crime   \n",
+       "..                        ...            ...         ...      ...     ...   \n",
+       "995    Breakfast at Tiffany's           1961           A      115  Comedy   \n",
+       "996                     Giant           1956           G      201   Drama   \n",
+       "997     From Here to Eternity           1953      Passed      118   Drama   \n",
+       "998                  Lifeboat           1944        None       97   Drama   \n",
+       "999              The 39 Steps           1935        None       86   Crime   \n",
+       "\n",
+       "       genre2     genre3  imdb  \\\n",
+       "0        None       None   9.3   \n",
+       "1       Drama       None   9.2   \n",
+       "2       Crime      Drama   9.0   \n",
+       "3       Drama       None   9.0   \n",
+       "4       Drama       None   9.0   \n",
+       "..        ...        ...   ...   \n",
+       "995     Drama    Romance   7.6   \n",
+       "996   Western       None   7.6   \n",
+       "997   Romance        War   7.6   \n",
+       "998       War       None   7.6   \n",
+       "999   Mystery   Thriller   7.6   \n",
+       "\n",
+       "                                              overview  meta_score  \\\n",
+       "0    Two imprisoned men bond over a number of years...          80   \n",
+       "1    An organized crime dynasty's aging patriarch t...         100   \n",
+       "2    When the menace known as the Joker wreaks havo...          84   \n",
+       "3    The early life and career of Vito Corleone in ...          90   \n",
+       "4    A jury holdout attempts to prevent a miscarria...          96   \n",
+       "..                                                 ...         ...   \n",
+       "995  A young New York socialite becomes interested ...          76   \n",
+       "996  Sprawling epic covering the life of a Texas ca...          84   \n",
+       "997  In Hawaii in 1941, a private is cruelly punish...          85   \n",
+       "998  Several survivors of a torpedoed merchant ship...          78   \n",
+       "999  A man in London tries to help a counter-espion...          93   \n",
+       "\n",
+       "                 director              star1              star2  \\\n",
+       "0          Frank Darabont        Tim Robbins     Morgan Freeman   \n",
+       "1    Francis Ford Coppola      Marlon Brando          Al Pacino   \n",
+       "2       Christopher Nolan     Christian Bale       Heath Ledger   \n",
+       "3    Francis Ford Coppola          Al Pacino     Robert De Niro   \n",
+       "4            Sidney Lumet        Henry Fonda        Lee J. Cobb   \n",
+       "..                    ...                ...                ...   \n",
+       "995         Blake Edwards     Audrey Hepburn     George Peppard   \n",
+       "996        George Stevens   Elizabeth Taylor        Rock Hudson   \n",
+       "997        Fred Zinnemann     Burt Lancaster   Montgomery Clift   \n",
+       "998      Alfred Hitchcock  Tallulah Bankhead        John Hodiak   \n",
+       "999      Alfred Hitchcock       Robert Donat  Madeleine Carroll   \n",
+       "\n",
+       "              star3           star4    votes      gross  \n",
+       "0        Bob Gunton  William Sadler  2343110   28341469  \n",
+       "1        James Caan    Diane Keaton  1620367  134966411  \n",
+       "2     Aaron Eckhart   Michael Caine  2303232  534858444  \n",
+       "3     Robert Duvall    Diane Keaton  1129952   57300000  \n",
+       "4     Martin Balsam    John Fiedler   689845    4360000  \n",
+       "..              ...             ...      ...        ...  \n",
+       "995   Patricia Neal     Buddy Ebsen   166544       <NA>  \n",
+       "996      James Dean   Carroll Baker    34075       <NA>  \n",
+       "997    Deborah Kerr      Donna Reed    43374   30500000  \n",
+       "998   Walter Slezak  William Bendix    26471       <NA>  \n",
+       "999  Lucie Mannheim  Godfrey Tearle    51853       <NA>  \n",
+       "\n",
+       "[1000 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "pd.read_parquet(\"..\\data\\imdb_top_1000.parquet\", engine=\"pyarrow\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "60fae4d1",
+   "id": "977414c9",
    "metadata": {},
    "outputs": [],
    "source": []
